# rust-sledge

./: .gitignore  Cargo.toml  README.md
doc/:  Bloomberg Exchange Identifiers.csv  GLN_DataModel_CodeValue_Nov2021.xlsx  ISO_10383_MIC.csv  ISO_4217 list-one.xls  ISO_4217-active-2022-09-23.csv  gs1Voc_v1_7
doc/gnucash/: gnucash-copy.gnucash  gnucash.sqlite3
schema/: account.json  commodity.json  config.json  journal.json  ledger.json  organization.json  person.json
sledge_config/: Cargo.toml
sledge_config/defaults/: client.yaml
sledge_config/schema/: config-schema.json
sledge_config/src/: client.rs  error.rs  lib.rs  server.rs  store.rs
sledge_config/tests/: client.yaml  parse_file.rs  server.yaml  test_json_01.rs  test_json_02.rs  test_json_03.rs  test_json_04.rs
sledge_config/tests/doc/: client.yaml  server.yaml
sledge_config/tests/json-01/: config.json
sledge_config/tests/json-02/: config.json
sledge_config/tests/json-03/: config.json
sledge_config/tests/json-04/: config.json
sledge_model/: Cargo.toml
sledge_model/src/: lib.rs
sledge_model/src/account/: #account.rs#  mod.rs
sledge_model/src/audit/: mod.rs  permission.rs  record.rs  sign.rs
sledge_model/src/catalog/: mod.rs  unit.rs
sledge_model/src/commodity/: currency.rs  exchange.rs  market.rs  mod.rs  security.rs
sledge_model/src/identity/: mod.rs
sledge_model/src/inventory/: mod.rs
sledge_model/src/journal/: README.md  mod.rs  reconcile.rs  split.rs  transaction.rs
sledge_model/src/ledger/: README.md  account.rs  mod.rs
sledge_model/src/party/: location.rs  mod.rs  organization.rs
sledge_model/src/store/: mod.rs
sledge_server/: Cargo.toml
sledge_services/: Cargo.toml
sledge_services/src/: lib.rs  prices.rs
sledge_store/: Cargo.toml
sledge_store/src/: error.rs  lib.rs
sledge_store/src/fs/: journal.rs  ledger.rs  mod.rs  permissions.rs  settings.rs
sledge_tui/: Cargo.toml
