[package]
name = "sledge_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
codes-iso-4217 = "0.1"
rust_decimal = "1.26"
serde = { version = "1.0", features = ["serde_derive"] }
