[package]
name = "sledge-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sledge_model = { version = "0.1", path = "../sledge_model" }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.26"
